--- a/styles/base.css
+++ b/styles/base.css
@@ -28,8 +28,21 @@ nav {
 }
 
 nav ul {
-
+  list-style-type: none;
 }
+
+nav a {
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+  text-decoration: none;
+}
+
+nav a :hover {
+  background-color: rgba(255,255,255, 0.5);
+}
+
 header {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
