--- a/styles/base.css
+++ b/styles/base.css
@@ -43,6 +43,10 @@ nav a :hover {
   background-color: rgba(255,255,255, 0.5);
 }
 
+nav .active {
+  background-color: rgba(0,0,0,0.5);
+}
+
 header {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
