--- a/week01/styles/holygrail.css
+++ b/week01/styles/holygrail.css
@@ -1,8 +1,7 @@
 body {
   display: grid;
   height: 100vh;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: auto auto 1fr auto;
+  grid-template: auto 1fr auto /auto 1fr auto;
   margin: 0;
 }
 
@@ -19,9 +18,14 @@ nav {
   padding: 1rem;
 }
 
+.left-sidebar {
+  background: lightblue;
+  grid-column: 1 / 2;
+}
+
 main {
   background: coral;
-  grid-column: 1 / 3;
+  grid-column: 2 / 3;
   padding: 1rem;
 }
 
@@ -37,4 +41,9 @@ footer {
   padding: 2rem;
   text-align: center;
   grid-column: 1 / 4;
+}
+
+.left-sidebar, 
+.right-sidebar {
+  padding: 1rem;
 }
