--- a/week01/styles/chamber-site.css
+++ b/week01/styles/chamber-site.css
@@ -12,6 +12,7 @@
     --secondary-color: #E4F2F1;
     --accent1-color: #66A393;
     --accent2-color: #A4B2B6;
+    --accent3-color: #1EAEA0;
 
     --heading-font: 'Sawarabi Mincho', serif;
     --paragraph-font: 'Quicksand', sans-serif;
@@ -42,6 +43,16 @@
     font-size: 22pt;
     font-family: 'Quicksand', sans-serif;
     color: #3A5B7E;
+  }
+
+  h3 {
+    font-size: 16pt;
+  }
+  
+  hr {
+    height: 3px;
+    margin: 35px 0;
+    background: #1EAEA0;
   }
   
   nav {
