--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 38rem) {
+@media only screen and (min-width: 500px) {
 main {
     display: grid;
     grid-template-columns: 2fr 1fr;
