--- a/styles/base.css
+++ b/styles/base.css
@@ -23,6 +23,21 @@ h1 {
   font-family: 'Quicksand', sans-serif;
 }
 
+#menu {
+  display: block;
+  position: absolute;
+  padding: 0;
+  
+}
+
+#menu::before {
+content: "☰";
+}
+
+#menu.open::before {
+  content: "X"
+}
+
 nav {
   background-color: #154e13;
 }
@@ -89,6 +104,12 @@ nav a:hover {
 nav li {
   display: block;
 }
+
+.open li {
+  display: block;
+  width: 100%;
+} 
+
 h2 {
   color: #326273;
   text-align: center;
