--- a/week02/styles/hamburger-menu.css
+++ b/week02/styles/hamburger-menu.css
@@ -6,6 +6,26 @@
 body {
 	font-family: Roboto, sans-serif;
 }
+
+h1 {
+	text-align: left;
+	font-family: times, serif;
+	font-size: 1.5rem;
+	margin-left: 1rem;
+}
+
+	h2 {
+		font-size: 1.2rem;
+		color: navy;
+		text-align: left;
+		margin: 1rem;
+	}
+
+nav {
+	max-width: 700px;
+	margin: 1rem auto;
+}
+
 /* Mobile View ***************/
 #menu {
 	display: block;
@@ -22,7 +42,7 @@ body {
 }
 
 nav {
-	background-color: tomato;
+	background-color: rgba(30,20,30,.1);
 }
 .navigation {
 	list-style: none;
@@ -71,5 +91,57 @@ nav {
 	}
 	#menu {
 		display: none;
+	}
+}
+/* when the button is clicked - the open class is toggle (added/removed) and accounted for here */
+.open li {
+	display: block;
+	width: 100%;
+}
+.open li a {
+	display: block;
+}
+
+.active::before {
+	content: "📍 ";
+}
+
+.stuff {
+	margin: .5m;
+	border: 1px solid rgba(0,0,0,.1);
+	background-color: #bed;
+	max-width: 580px;
+	height: 100vh;
+	
+}
+
+/* large view navigation ************************************/
+@media (min-width: 37.5em) {
+	h1 {
+		font-size: 2.5rem;
+		margin-left: 0;
+		text-align: center;
+	}
+	
+	h2 {
+		font-size: 2rem;
+		text-align: center;
+	}
+
+	#menu {
+		display: none; /* hide hamburger button */
+	}
+
+	.navigation {
+		flex-direction: row;
+	}
+
+	.navigation li {
+		display: block;
+		flex: 1 1 100%;
+	}
+	
+	.stuff {
+		margin: 1rem auto;
 	}
 }
