--- a/week02/styles/hamburger-menu.css
+++ b/week02/styles/hamburger-menu.css
@@ -76,42 +76,14 @@ nav {
 	text-align: left;
 	text-decoration: none;
 	color: black;
-	font-weight: 700;
-	transition: 0.5s;
-	font-size: clamp(1rem, 2vmin, 1.5rem);
-}
-.navigation a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: black;
-	font-weight: 700;
-	transition: 0.5s;
-	font-size: clamp(1rem, 2vmin, 1.5rem);
 }
 
-.navigation a:hover, navigation a:active {
-	color: white;
-	background-color: black;
+.navigation li a:hover {
+	background-color: rgba(8, 8, 8, 1);
+	color: rgba(17, 164, 125, 0.232);
+	font-weight: 700;
 }
 
-/* Media Query for wider than mobile viewports. Breakpoint should be based upon the design and content and use em units to be relative to the user's font size versus fixed with pixels.*/
-@media only screen and (min-width: 40em) {
-	.navigation {
-		display: flex;
-	}
-	.navigation li {
-		display: block; /* change state in small view */
-		flex: 1 1 100%;
-	}
-	.navigation a {
-		text-align: center;
-	}
-	#menu {
-		display: none;
-	}
-}
 /* when the button is clicked - the open class is toggle (added/removed) and accounted for here */
 .open li {
 	display: block;
@@ -131,7 +103,6 @@ nav {
 	background-color: #bed;
 	max-width: 580px;
 	height: 100vh;
-	
 }
 
 /* large view navigation ************************************/
