--- a/week02/styles/hamburger-menu.css
+++ b/week02/styles/hamburger-menu.css
@@ -14,11 +14,11 @@ h1 {
 	margin-left: 1rem;
 }
 
-	h2 {
-		font-size: 1.2rem;
-		color: navy;
-		text-align: left;
-		margin: 1rem;
+h2 {
+	font-size: 1.2rem;
+	color: navy;
+	text-align: left;
+	margin: 1rem;
 	}
 
 nav {
@@ -29,7 +29,6 @@ nav {
 /* Mobile View ***************/
 #menu {
 	font-size: 2rem;
-	font-weight:700;
 	text-decoration: none;
 	padding: .5rem .75rem;
 	background-color: #eee;
@@ -55,15 +54,11 @@ nav {
 	content: "X";
 }
 
-nav {
-	background-color: rgba(30,20,30,.1);
-}
 .navigation {
 	display: flex;
 	flex-direction: column;
 	list-style: none;
 	margin: 0 auto;
-	max-width: 760px;
 }
 
 .navigation li {
@@ -73,7 +68,7 @@ nav {
 .navigation li a {
 	display: block;
 	padding: 0.75rem;
-	text-align: left;
+	text-align: center;
 	text-decoration: none;
 	color: black;
 }
