--- a/week02/styles/hamburger-menu.css
+++ b/week02/styles/hamburger-menu.css
@@ -7,35 +7,15 @@ body {
 	font-family: Roboto, sans-serif;
 }
 
-h1 {
-	text-align: left;
-	font-family: times, serif;
-	font-size: 1.5rem;
-	margin-left: 1rem;
-}
-
-h2 {
-	font-size: 1.2rem;
-	color: navy;
-	text-align: left;
-	margin: 1rem;
-	}
-
-nav {
-	max-width: 700px;
-	margin: 1rem auto;
-}
-
 /* Mobile View ***************/
 #menu {
+	display: block;
 	font-size: 2rem;
+	font-weight: 700;
 	text-decoration: none;
 	padding: .5rem .75rem;
 	background-color: #eee;
 	color: rgba(30,20,30,.1);
-	position: absolute;
-	top: 10px;
-	right: 10px;
 }
 
 #menu::before {
@@ -46,17 +26,8 @@ nav {
 	content: "x";
 }
 
-.show li {
-	display: block;
-}
-
-#menu.show::before {
-	content: "X";
-}
-
 .navigation {
-	display: flex;
-	flex-direction: column;
+	max-width: 760px;
 	list-style: none;
 	margin: 0 auto;
 }
@@ -65,18 +36,29 @@ nav {
 	display: none;
 }
 
-.navigation li a {
+.navigation a {
 	display: block;
 	padding: 0.75rem;
-	text-align: center;
+	text-align: left;
 	text-decoration: none;
 	color: black;
+	font-weight: 700;
+	transition: 0.5s;
+	font-size: clamp(1rem, 2vmin, 1.5rem);
 }
 
-.navigation li a:hover {
-	background-color: rgba(8, 8, 8, 1);
-	color: rgba(17, 164, 125, 0.232);
+.navigation a:hover, navigation a:active {
+	background-color: rgba(17, 164, 125, 0.232);
+	color: rgba(8, 8, 8, 1);
 	font-weight: 700;
+}
+
+.show li {
+	display: block;
+}
+
+#menu.show::before {
+	content: "X";
 }
 
 /* when the button is clicked - the open class is toggle (added/removed) and accounted for here */
@@ -101,29 +83,23 @@ nav {
 }
 
 /* large view navigation ************************************/
-@media (min-width: 37.5em) {
-	h1 {
-		font-size: 2.5rem;
-		margin-left: 0;
-		text-align: center;
-	}
-	
-	h2 {
-		font-size: 2rem;
-		text-align: center;
+@media (min-width: 40em) {
+
+.navigation {
+	display: flex;
 	}
 
-	#menu {
-		display: none; /* hide hamburger button */
+.navigation li {
+	display: block;
+	flex: 1 1 100%;
 	}
 
-	.navigation {
-		flex-direction: row;
-	}
+.navigation a {
+	text-align: center;
+}
 
-	.navigation li {
-		display: block;
-		flex: 1 1 100%;
+#menu {
+	display: none; /* hide hamburger button */
 	}
 	
 	.stuff {
