--- a/styles/base.css
+++ b/styles/base.css
@@ -15,12 +15,11 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 2px;
   color: white;
   font-family: "Sawarabi Mincho";
   position: absolute;
 }
-
 
 h1 {
   font-size: 2rem;
@@ -34,7 +33,6 @@ h1 {
   display: block;
   position: absolute;
   padding: 0;
-  
 }
 
 #menu::before {
@@ -46,7 +44,9 @@ content: "☰";
 }
 
 nav {
-  background-color: #154e13;
+  background-color: rgba(21,78,19,.2);
+  text-align: center;
+  min-height: 50px;
 }
 
 nav ul {
@@ -105,7 +105,7 @@ h2 {
   color: #326273;
   text-align: center;
   border-bottom: 2px solid #326273; /* Change the color and thickness as needed */
-  padding-bottom: 5px; /* Adjust the space between the text and the line as needed */
+  padding-bottom: 2px; /* Adjust the space between the text and the line as needed */
   font-family: "Sawarabi Mincho";
 }
 
@@ -120,6 +120,23 @@ main {
   display: grid;
   padding-inline: 40px;
 }
+
+.hero {
+  margin: auto;
+  position: relative;
+  border: 1px sold rgba(0,5,9,.2);
+  height: auto;
+}
+
+.herolabel {
+  position: absolute;
+  top: 2rem;
+  left: 1.4rem;
+  padding: .75rem;
+  box-shadow: 0 0 3rem #fff;
+  opacity: .70;
+}
+
 .card {
   text-align: center;
   border: 1px solid #326273;
