--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -38,7 +38,7 @@ span p {font-size: 1.5rem}
 	padding: 0.75rem;
 	text-align: left;
 	text-decoration: none;
-	color: black;
+	color: #3A5B7E;
 	font-weight: 700;
 	transition: 0.5s;
 	font-size: clamp(1rem, 2vmin, 1.5rem);
@@ -65,10 +65,6 @@ span p {font-size: 1.5rem}
 }
 .open li a {
 	display: block;
-}
-
-.active::before {
-	content: "📍 ";
 }
 
 .stuff {
@@ -142,7 +138,7 @@ header h2 {margin: 0; font-weight: normal;}
 
 /*----------- NAVIGATION --------------*/
 nav {
-    background-color: #666;
+    background-color: #E4F2F1;
 }
 nav ul {
     list-style-type: none;
@@ -155,7 +151,7 @@ nav ul li {
 }
 nav ul li a {
     display: block;
-    background-color: #444;
+    background-color: #A4B2B6;
     color: #eee;
     border-left: 1px solid #777;
     padding: .5rem 0;
@@ -195,7 +191,7 @@ form legend {
 form label.top, form div {
     display: block;
     padding-top: 1rem;
-    color: #9c2c13;
+    color: #3A5B7E;
     font-size: .8rem;
 }
 form label.top input, form label.top select {
@@ -217,19 +213,19 @@ form label.sbs {
 } 
 form input.submitBtn {
     border: none;
-    background-color: #9c2c13;
+    background-color: #3A5B7E;
     color: white;
-    border-radius: 1rem;
+    border-radius: .5rem;
     padding: .75rem 1.5em;
     margin: 0 0 2rem 2%;
-    width: 96%;
-    max-width: 20rem;
+    width: 90%;
+    max-width: 15rem;
 }
 form label.top input:required {
     border-left: red solid 6px;
 }
 form label.top input:required:valid {
-    border-left: green solid 6px;
+    border-left: #66A393 solid 6px;
 }
 /*----------- FOOTER --------------*/
 footer {
