--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -109,7 +109,7 @@ div .sidebar {
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0,5,9,.2);
     color: black;
-    background-color: ;
+    background-color: #bed;
     text-align: center;
     margin-top: 10px;
 
