--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -3,6 +3,15 @@
     span {font-size: 2rem}
 }
 
+.city-grid {
+ display: grid;
+ grid-template-columns: 1fr 2fr;
+ column-gap: 20px;
+ margin: auto;
+ max-width: 960px;
+ justify-content: center;       
+}
+
 @media only screen and (min-width: 45em) {
 
     header, nav, main, footer {
