--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -12,6 +12,14 @@
  justify-content: center;       
 }
 
+.hero {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: auto;
+    grid-column: 1 / span 2;
+}
+
 @media only screen and (min-width: 45em) {
 
     header, nav, main, footer {
