--- a/styles/larger.css
+++ b/styles/larger.css
@@ -7,5 +7,11 @@ main h2 {
     grid-column: 1 / span 2;
 }
 
-
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+    margin: auto;
+    max-width: 960px;
+    justify-content: center; 
 }
