grid fix spelling

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -115,6 +115,9 @@ span p {font-size: 1.5rem}
     margin-top: 10px;
 }
 
+div {
+	display: block;
+}
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
