--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -7,7 +7,7 @@ span p {font-size: 1.5rem}
 	font-size: 2rem;
 	font-weight: 700;
 	text-decoration: none;
-	padding: 0px;
+	padding: 10px;
 	position: absolute;
 	background-color: black;
 	color: white;
@@ -116,6 +116,10 @@ span p {font-size: 1.5rem}
 }
 
 div {
+	display: block;
+}
+
+section	{
 	display: block;
 }
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
