--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,5 +1,3 @@
-span {background-color: red}
-
 span p {font-size: 1.5rem}
 /* Mobile View ***************/
 #menu {
@@ -16,6 +14,11 @@ span p {font-size: 1.5rem}
 	right: 10px;
 }
 
+h1 {
+	grid-column: 1 / span 2;
+	text-align: center;
+	font-size: 31px;
+}
 #menu::before {
 	content: "≡";
 }
@@ -236,7 +239,7 @@ form label.top input:required:valid {
 }
 /*----------- FOOTER --------------*/
 footer {
-    background-color: #ddd;
+    background-color: #E4F2F1;
     padding: .5rem 2%;
     text-align: center;
 }
