--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -12,6 +12,15 @@
  justify-content: center;       
 }
 
+.grid-home {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+    margin: auto;
+    max-width: 960px;
+    justify-content: center;
+}
+
 .hero {
     width: 100%;
     height: 100%;
