--- a/styles/base.css
+++ b/styles/base.css
@@ -21,6 +21,15 @@ header {
   position: relative;
 }
 
+#darkBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  width: 75px;
+  height: 75px;
+}
+
 h1 {
   font-size: 2rem;
   font-family: 'Quicksand', sans-serif;
@@ -74,12 +83,11 @@ img {
   width: 150px;
   grid-column: 2 / 3;
   padding: 20px;
-  overflow-clip-margin: content-box;
 }
 
 nav ul {
-  list-style: none; /* Remove default list styles */
-  padding: 200px; /* Remove default padding */
+  list-style: none;
+  padding: 5px;
 }
 
 nav a {
@@ -182,14 +190,10 @@ footer {
 	}
 }
 
-.dark-mode {
-  background-color: rgba(21,78,19, 0.9);
-}
 #darkBtn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-  width: 75px;
-  height: 75px;
+
+}
+.dark-mode {
+  background-color: #010101;
+  color: #fff;
 }
