--- a/styles/larger.css
+++ b/styles/larger.css
@@ -2,6 +2,11 @@
 main {
     display: grid;
     grid-template-columns: 2fr 1fr;
+    column-gap: 20px;
+    margin: auto;
+    max-width: fit-content;
+    justify-content: center;
+    align-items: center;
 }
 main h2 {
     grid-column: 1 / span 2;
