--- a/styles/base.css
+++ b/styles/base.css
@@ -147,6 +147,31 @@ main {
   opacity: .70;
 }
 
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;  
+}
+
+.herolabel {
+  position: absolute;
+  top: 2rem;
+  left: 1.5rem;
+  background: radial-gradient(#fff, #526685);
+  border: 1px solid rgba(0,0,0,.75);
+  padding: .75rem;
+  box-shadow: 0 0 3rem #fff;
+  opacity: 0.75;
+}
+
+.herolabel p {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 1.25rem;
+  font-family: "sans-serif"
+}
+
 .card {
   text-align: center;
   border: 1px solid #326273;
