--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,3 +1,65 @@
+@media screen and (min-width: 38rem) {
+
+    nav ul {
+        display: flex;
+    }
+
+    
+    nav ul li {
+        display: block;
+        flex: 1 1 100%;
+    }
+
+    image {
+        max-width: 960px;
+        
+    }
+    .hero {
+        margin: auto;
+        position: relative;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        height: auto;
+        grid-column: 1 / span 2;
+    }
+
+    .hero {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .herolabel p {
+        font-size: 2rem;
+    }
+
+    #menu {
+        display: none;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 20px;
+        margin: auto;
+        max-width: 960px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main h2 {
+        grid-column: 1 / span 2;
+    }
+
+    .map {
+        position: relative;
+        max-width: 960px;
+        margin:0 auto;
+        width: 100%;
+        height: auto;
+        grid-column: 1 / span 2;
+    }
+}
+
 @media only screen and (min-width: 500px) {
 main {
     display: grid;
