--- a/styles/base.css
+++ b/styles/base.css
@@ -7,6 +7,7 @@
 body {
   font-weight: 600;
   font-family: 'Sawarabi Mincho', serif;
+  background-color: #E4F2F1;
 }
 
 /* mobile ****************************/
