--- a/styles/base.css
+++ b/styles/base.css
@@ -7,7 +7,7 @@
 body {
   font-weight: 600;
   font-family: 'Sawarabi Mincho', serif;
-  background-color: #E4F2F1;
+  background-color: #fff;
 }
 
 /* mobile ****************************/
@@ -150,7 +150,7 @@ main {
 
 .hero img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;  
 }
 
