--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -19,6 +19,46 @@ h1 {
 	text-align: center;
 	font-size: 31px;
 }
+
+.city-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+    margin: auto;
+    max-width: 960px;
+    justify-content: center;       
+   }
+   
+.grid-home {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 20px;
+    margin: auto;
+    max-width: 960px;
+    justify-content: center;
+   }
+
+.sidebar {
+    padding: 10px;
+}
+    
+.sidebar-card {
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0,5,9,.2);
+    color: black;
+    background-color: #bed;
+    text-align: center;
+    margin-top: 10px;
+}
+
+div {
+    display: block;
+}
+
+section	{
+    display: block;
+}
 #menu::before {
 	content: "≡";
 }
@@ -143,3 +183,4 @@ footer {
   display: table;
   clear: both;
 }
+
