--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -112,11 +112,11 @@ section	{
 }
 
 .stuff {
-	margin: .5m;
+	margin: .5rem;
 	border: 1px solid rgba(0,0,0,.1);
 	background-color: #bed;
 	max-width: 580px;
-	height: 100vh;
+	height: auto;
 }
 
 /* large view navigation ************************************/
