--- a/week01/styles/media-query.css
+++ b/week01/styles/media-query.css
@@ -20,3 +20,10 @@ section {
     padding: 1rem;
     background-color: #fff;
 }
+
+footer {
+	margin-top: 1rem;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	background-color: rgba(252,191,73,.1);
+    text-align: center;
+}
