--- a/week02/styles/design.css
+++ b/week02/styles/design.css
@@ -58,6 +58,6 @@ article p {
 footer {
 	margin-top: 1rem;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	font-size: smaller;
-	text-align: left;
+	background-color: rgba(252,191,73,.1);
+    text-align: center;
 }
