--- a/week03/styles/bom.css
+++ b/week03/styles/bom.css
@@ -58,6 +58,13 @@ li {
 	justify-content: space-between;
 }
 
+footer {
+	margin-top: 1rem;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	background-color: rgba(252,191,73,.1);
+    text-align: center;
+}
+
 @media only screen and (min-width: 32.5em) {
 	h1 {
 		font-size: 2rem;
