--- a/week03/styles/lazyload.css
+++ b/week03/styles/lazyload.css
@@ -27,3 +27,10 @@ img {
         opacity: 1;
     }
 }
+
+footer {
+	margin-top: 1rem;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	background-color: rgba(252,191,73,.1);
+    text-align: center;
+}
