--- a/week03/styles/responsive-images.css
+++ b/week03/styles/responsive-images.css
@@ -2,3 +2,10 @@
     width: 100%;
     height: auto;
 }
+
+footer {
+	margin-top: 1rem;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	background-color: rgba(252,191,73,.1);
+    text-align: center;
+}
