--- a/week04/styles/tablebuild.css
+++ b/week04/styles/tablebuild.css
@@ -1,13 +1,64 @@
 :root {
-	--back: hsla(150, 50%, 30%, 1);
-  --back2: hsla(150, 50%, 30%, .5);
-  --foredark: hsla(0,0%,10%,1);
-	--forelight: hsla(0,0%,100%,1);
-	--border: hsla(0,0%,20%,.8);
-	--borderlight: hsla(0,0%,33%,.3);
-	--shadow: hsl(0,0%,50%);
-	--zebra: hsl(0, 0%, 93%, 1);
+	--bord: 1px solid #777;
 }
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+main {
+	margin: 0;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 0.5rem;
+	width: 760px;
+	background-color: #eee;
+}
+
+.datatable {
+	width: 200px;
+	margin-top: 2rem;
+}
+
+.row {
+	display: grid;
+	grid-template-columns: 100px 100px;
+	align-items: center;
+	text-align: center;
+}
+
+.col {
+	border-top: var(--bord);
+	border-left: var(--bord);
+	padding: 10px;
+}
+
+.col:nth-child(even) {
+	border-right: var(--bord);
+}
+
+.row:last-child {
+	border-bottom: var(--bord);
+	background-color: #bbb;
+}
+
+a:active,
+a:link,
+a:visited {
+	color: navy;
+}
+
+a:hover {
+	color: purple;
+}
+
 
 body {
 	font-family: "EB Garamond", Arial, serif;
@@ -48,4 +99,40 @@ footer {
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	background-color: rgba(252,191,73,.1);
     text-align: center;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+main {
+	margin: 0;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	padding: 0.5rem;
+	width: 760px;
+	background-color: #eee;
+}
+
+.datatable {
+	width: 200px;
+	margin-top: 2rem;
+}
+
+.row {
+	display: grid;
+	grid-template-columns: 100px 100px;
+	align-items: center;
+	text-align: center;
+}
+
+.col {
+	padding: 10px;
 }
