--- a/styles/base.css
+++ b/styles/base.css
@@ -173,31 +173,34 @@ main {
   font-family: "sans-serif"
 }
 
+.card-box {
+  grid-column: 1 / 3;
+}
+
 .card {
   text-align: center;
   border: 1px solid #326273;
   color: #326273;
   margin-bottom: 20px;
 }
-.activities li {
+
+.card-list {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 2px;
+  margin-right: 2px;
+  padding: 0;
   text-align: left;
-/*  list-style-type: decimal-leading-zero;*/
   text-decoration: none;
   color: #A4B2B6;
 }
-.activities a {
+
+.card-list a {
   color: #326273;
 }
-.activities a:hover {
-  color: #fcbf49;
-}
 
-.card-list {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 0;
+.card-list a:hover {
+  color: #fcbf49;
 }
 
 .card-list li {
