--- a/styles/larger.css
+++ b/styles/larger.css
@@ -82,4 +82,10 @@ main h2 {
     max-width: 960px;
     justify-content: center; 
 }
+
+.card-box {
+    grid-column: 1 / 2;
+    margin-left: 8px;
+    margin-right: 8px;
+}
 }
