added font family

--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@
   background-color: #fff;
   accent-color:   #A4B2B6;
   font-family: 'Sawarabi Mincho', serif;
+  font-family: 'Quicksand', sans-serif;
 }
 * {
   margin: 0;
