form positioning and styling

--- a/styles/form.css
+++ b/styles/form.css
@@ -20,7 +20,7 @@ label {
 }
 
 input[type=text], input[type=range], input[type=radio] {
-	margin: 1rem;
+	margin: 0rem;
 	padding: 0.5em;
 }
 
@@ -59,6 +59,29 @@ input[type=text], input[type=range], input[type=radio] {
 	flex: 1 1 auto;
 }
 
+#validate {
+	visibility: none;
+	margin: 10px;
+	padding: 0.5rem;
+	color: red;
+}
+
+#password:invalid {
+	background-color: #fff0f3;
+	animation: shaketext 500ms;
+}
+
+#emailvalidate {
+	visibility: none;
+	margin: 10px;
+	padding: 0.5rem;
+	color: red;
+}
+
+#email:invalid {
+	background-color: #fff0f3;
+	animation: shaketext 500ms;
+}
 /*----------- MAIN --------------*/
 form fieldset {
     margin: 2rem 0;
