--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -144,7 +144,8 @@ form fieldset {
     border: 1px solid #445ba9;
     border-radius: 10px;
     padding: .5rem 2%;
-    }
+}
+
 form legend {
     color: #445ba9;
     margin: 0 1rem;
@@ -172,7 +173,12 @@ form label.top input, form label.top select {
     max-width: 20rem;
     background-color: rgba(0, 0, 0, .1);
 }
-form label.member-grid {
+
+.member-grid {
+    grid-column: 1 / span 2;
+}
+
+form .sbs {
     display: block;
     padding: .75rem 0;
     color: #555;
@@ -211,6 +217,12 @@ form label.top input:required {
 form label.top input:required:valid {
     border-left: #66A393 solid 6px;
 }
+
+#np-list
+#bronze-list
+#silver-list
+#gold-list
+
 /*----------- FOOTER --------------*/
 
 footer {
