--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -17,7 +17,14 @@ span p {font-size: 1.5rem}
 h1 {
 	grid-column: 1 / span 2;
 	text-align: center;
-	font-size: 31px;
+	font-size: 35px;
+    padding: 20px;
+}
+
+h2 {
+	grid-column: 1 / span 2;
+	text-align: center;
+	font-size: 30px;
 }
 
 .city-grid {
