--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -19,6 +19,7 @@ h1 {
 	text-align: center;
 	font-size: 35px;
     padding: 20px;
+    background-color: rgba(17, 164, 125, 0.232);
 }
 
 h2 {
@@ -78,6 +79,8 @@ section	{
 	max-width: 760px;
 	list-style: none;
 	margin: 0 auto;
+    background-color: rgba(17, 164, 125, 0.232);
+    grid-column: span ;
 }
 
 .navigation li {
