--- a/styles/base.css
+++ b/styles/base.css
@@ -145,12 +145,14 @@ main {
   position: relative;
   border: 1px solid rgba(0,5,9,.2);
   height: auto;
+  object-fit: cover; 
 }
 
 .hero img {
   width: 100%;
   height: auto;
-  object-fit: cover;  
+  object-fit: cover; 
+  grid-column: 1 / 5; 
 }
 
 .herolabel {
@@ -165,16 +167,16 @@ main {
 }
 
 .card-box {
-  grid-column: 1 / 3;
   text-align: left;
   border: 1px solid #326273;
   color: #326273;
+  margin: 2rem;
 }
 
-.card {
+.card-box h4 {
   text-align: center;
-  border: 1px solid #326273;
   color: #326273;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -191,16 +193,17 @@ main {
 
 .card-list a {
   color: #326273;
+  padding-bottom: 2rem;
 }
 
-.card-list a:hover {
+.card-box a:hover {
   color: #fcbf49;
 }
 
 .card-list li {
   font-size: 1.1em;
   list-style-type: none;
-  padding-top: 5px;
+  padding-top: 5rem;
   padding-bottom: 5px;
 }
 
