--- a/week05/styles/psuedo-elements.css
+++ b/week05/styles/psuedo-elements.css
@@ -9,6 +9,16 @@ body {
 	justify-content: center;
 }
 
+header {
+    margin: 1rem;
+    position: center;
+    font-family: Roboto, helvetica, sans-serif;
+	margin: 0;
+	padding: 0.5rem;
+	font-size: larger;
+	font-weight: 700;
+}
+
 h1,
 h2,
 h3,
@@ -66,4 +76,11 @@ ol {
 }
 li::before {
 	content: "☑️ ";
+}
+
+footer {
+	margin-top: 1rem;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	background-color: rgba(252,191,73,.1);
+    text-align: center;
 }
