--- a/week05/styles/prophets.css
+++ b/week05/styles/prophets.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 body {
-  font-size: 16px;
   font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
@@ -14,109 +13,47 @@ footer {
 h1 {
   color: #000;
   border-bottom: 1px solid #eee;
-  text-shadow: 0 0 15px #777;
+  text-shadow: 0 0 10px #777;
   width: 60%;
 }
 
 h2 {
-  color: navy;
-  margin: 0 0 1rem 0;
-	 border-bottom: 1px solid #bbb;
-}
-
-h3 {
-  margin: 0;
-}
-
-h4 {
-  color: #333;
-  margin: 7px 0 5px 0;
+  color: rosybrown;
 }
 
 p {
   margin: 0;
+  padding: 2px;
+  font-weight: 400;
 }
 
-main {
-  margin-left: 2rem;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-.grid section {
+section {
   margin: 0.25rem;
   padding: 0.35rem;
-  background-color: #eee;
-  border: 1px solid #bbb;
+  background-color: #bcb;
+  border: 1px solid #bed;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  text-align: center;
-}
-section > p {
-  min-height: 60px;
 }
 
-.grid img {
+img {
+  width: auto;
+  max-width: 325px;
   box-shadow: 1px solid #bbb;
-  height: 100px;
+  height: 200px;
   background-color: #eee;
   border: 1px solid #bbb;
 }
 
-li > img {
-  width: auto;
-  height: 30px;
-}
-
-footer {
-  border-top: 1px solid #555;
-  padding: 20px;
-}
-
-.caption {
-  position: absolute;
-  top: 1.5rem;
-  right: 2rem;
-  border: 1px solid #ccc;
-  background-color: lightyellow;
-  padding: 0.25rem;
+#cards {
   display: grid;
   align-items: center;
-  grid-template-columns: 1rem 1fr;
-}
-
-.caption h6 {
-  position: absolute;
-  top: -2.3rem;
-  left: -0.25rem;
-}
-
-.caption > div {
-  width: 0.75rem;
-  height: 0.75rem;
-  border: 1px solid #bbb;
-}
-
-.caption > p {
-  font-size: 0.75rem;
-}
-
-.most {
-  background-color: #bed;
-}
-
-.fav {
-  background-color: skyblue;
-}
-
-.own {
-  background-color: rosybrown;
-}
-
-.un {
-	list-style: none;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  background-color: rgba(135,206,235,.21);
+  border: 1px solid #bed;
+  padding: 0.25rem;
+  align-items: center;
 }
 
 footer {
