--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -146,6 +146,68 @@ section	{
 	height: auto;
 }
 
+.cards section,
+.grid section {
+  border: 1px solid ;
+  margin: 0 5px 10px 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: ;
+  padding: 1rem 0;
+  box-shadow: ;
+}
+
+.cards section h2,
+.grid section h2 {
+  line-height: 3rem;
+  height: 3rem;
+  text-align: center;
+  font-size: 1.8em;
+  font-weight: bold;
+  color: ;
+  background-color: ;
+  margin: 0;
+}
+
+#spotlight-1 section p,
+#spotlight-2 section p,
+#spotlight-3 section p,
+.cards section p,
+.grid section p {
+    color: ;
+    margin: 5px auto;
+    padding: 0 0 0 8px;
+}
+
+.cards section img,
+.grid section img {
+    margin: 1rem;
+    background-color: ;
+}
+
+#spotlight-1 section a,
+#spotlight-2 section a,
+#spotlight-3 section a,
+.cards section a,
+.grid section a {
+  font-size: 1.1em;
+  color: ;
+  padding: 12px 0;
+  margin: 5px 0;
+}
+
+#spotlight-1 section p.address,
+#spotlight-2 section p.address,
+#spotlight-3 section p.address,
+.cards section p.address,
+.grid section p.address {
+  width: 210px;
+  text-align: center;
+  margin: 5px auto;
+}
+
+
 /* large view navigation ************************************/
 
 /*----------- MAIN --------------*/
