--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -38,8 +38,8 @@ h2 {
    }
    
 .grid-home {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    display: flex;
+    grid-template-columns: 1fr 1fr;
     column-gap: 20px;
     margin: auto;
     max-width: 960px;
@@ -64,8 +64,13 @@ div {
     display: block;
 }
 
+.weather {
+    grid-row: 2;
+}
+
 section	{
-    display: block;
+    display: flex;
+    grid-row-start: 2;
 }
 #menu::before {
 	content: "≡";
@@ -177,7 +182,7 @@ button {
     padding: .5rem;
 }
 
-.directory.grid #cards {
+.directory #grid-directory #cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 10px;
@@ -185,39 +190,39 @@ button {
     align-items: stretch;
 }
 
-.directory.list #cards {
+.directory #list-directory #cards {
     margin: 15px;
 }
 
-.directory.list {
+.directory #list-directory {
     display: flex;
     flex-direction: column;
 }
 
-.directory.list section {
+.directory #list-directory section {
     box-shadow: none;
     margin: 0;  
     padding: .5rem;
 }
 
-.directory.list section > * {
+.directory #list-directory section > * {
     margin: 0 1rem;
 }
 
-.directory.list section img {
+.directory #list-directory section img {
     display: none; /* smaller viewports only */
 }
 
-.directory.list section h2 {
+.directory #list-directory section h2 {
     font-size: 1rem;
     border-bottom: 0;
 }
 
-.directory.list section p {
+.directory #list-directory section p {
     font-size: 1rem;
 }
 
-.directory.list section:nth-child(even) {
+.directory #list-directory section:nth-child(even) {
     background-color: rgba(0, 0, 0, .1);
 }
 
