--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -28,6 +28,17 @@ h2 {
 	font-size: 30px;
 }
 
+.sidebar h3 {
+	text-wrap: wrap;
+	font-size: 25px;
+}
+
+h3 {
+	grid-column: 1 / span 2;
+	text-align: center;
+	font-size: 25px;
+}
+
 .city-grid {
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -38,7 +49,7 @@ h2 {
    }
    
 .grid-home {
-    display: flex;
+    display: block;
     grid-template-columns: 1fr 1fr;
     column-gap: 20px;
     margin: auto;
@@ -55,7 +66,7 @@ h2 {
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0,5,9,.2);
     color: black;
-    background-color: #bed;
+    background-color: rgba(0,5,9,.135);
     text-align: center;
     margin-top: 10px;
 }
