--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -109,3 +109,131 @@ body {
         padding: 0 2%;
         min-height: 20rem;
     }
+
+
+    /*----------- DIRECTORY PAGE :) :( --------------*/
+    #cards {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 3rem;
+        padding: 50px;
+      }
+      
+      .menu {
+        margin: 1rem auto;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 0.5rem;
+        background-color: #bed;
+        text-align: center;
+      }
+      
+      .menu button {
+        padding: 1rem;
+        font-weight: 700;
+      }
+      
+      section {
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 0.5rem;
+        background-color: #eee;
+      }
+      
+      .grid-directory {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-gap: 5px;
+        align-items: center;
+      }
+      
+      .grid-directory section {
+        width: 350px;
+        height: 500px;
+        margin: 0.5rem;
+        box-shadow: 0 0 20px #cccccc;
+        padding: 1rem;
+        background-color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+      }
+      
+      .grid-directory img {
+        width: 250px;
+        height: 250px;
+        margin: 0.5rem;
+        border-radius: 10px;
+        padding: 20px;
+      }
+      
+      .grid-directory section > * {
+        margin: 0.1rem;
+      }
+      
+      .grid-directory h3 {
+        color: black;
+        font-size: 1rem;
+        padding: 10px;
+      }
+      
+      .list-directory {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+      }
+      
+      .list-directory section {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
+        margin: 0;
+        padding: 0.25rem;
+        width: 100%;
+        height: 100px;
+        margin: 0.5rem;
+        box-shadow: 0;
+        padding: 0;
+      }
+      
+      .list-directory section > * {
+        margin: 0 1rem;
+      }
+      
+      .list-directory section img {
+        display: none; /* smaller viewports only */
+      }
+      
+      .list-directory section h3 {
+        font-size: 1rem;
+        font-family: Roboto, Helvetica, sans-serif;
+      }
+      
+      .list-directory section:nth-child(even) {
+        background-color: #bed;
+      }
+      
+      section h3 {
+        font-size: 1.5rem;
+      }
+      
+      section p {
+        font-weight: 600;
+        font-size: smaller;
+      }
+      
+      section a {
+        font-family: "Roboto", Arial, sans-serif;
+        font-size: 0.85rem;
+        color: navy;
+        letter-spacing: 1.1pt;
+        text-decoration: none;
+      }
+      
+      img {
+        height: 75px;
+        max-width: 100%;
+      }
