--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -187,7 +187,7 @@ body {
         width: 100%;
       }
       
-      .list-directory section {
+      section .list-directory {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
         margin: 0;
@@ -198,11 +198,7 @@ body {
         box-shadow: 0 0 20px #cccccc;
         padding: 0;
       }
-      
-      .list-directory section > * {
-        margin: 0 1rem;
-      }
-      
+           
       .list-directory section img {
         display: none; /* smaller viewports only */
       }
