--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -141,14 +141,14 @@ section {
   background-color: #eee;
 }
       
-.grid-directory {
+.grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 5px;
   align-items: center;
 }
       
-.grid-directory section {
+.grid section {
   width: 350px;
   height: 500px;
   margin: 0.5rem;
@@ -163,7 +163,7 @@ section {
   border-radius: 10px;
 }
       
-.grid-directory img {
+.grid img {
   width: 250px;
   height: 250px;
   margin: 0.5rem;
@@ -171,23 +171,23 @@ section {
   padding: 20px;
 }
       
-.grid-directory section > * {
+.grid section > * {
   margin: 0.1rem;
 }
       
-.grid-directory h3 {
+.grid h3 {
   color: black;
   font-size: 1rem;
   padding: 10px;
 }
       
-.list-directory {
+.list {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
       
-section .list-directory {
+.list section {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   margin: 0;
@@ -195,20 +195,24 @@ section .list-directory {
   width: 100%;
   height: 100px;
   margin: 0.5rem;
-  box-shadow: 0 0 20px #cccccc;
+  box-shadow: 0;
   padding: 0;
 }
+
+.list section > * {
+  margin: 0 1rem;
+}
            
-.list-directory section img {
+.list section img {
   display: none; /* smaller viewports only */
 }
       
-.list-directory section h3 {
+.list section h3 {
   font-size: 1rem;
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
 }
      
-.list-directory section:nth-child(even) {
+.list section:nth-child(even) {
   background-color: #bed;
 }
       
