--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -205,7 +205,7 @@ section {
   width: 100%;
   height: 100px;
   margin: 0.5rem;
-  box-shadow: 0;
+  box-shadow: 0 0 20px #cccccc;
   padding: 0;
 }
 
